--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,11 +1,5 @@
-<!--
-  Generated template for the ContactPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-    <ion-navbar> color="primary"
+    <ion-navbar color="primary">
         <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button>
@@ -16,5 +10,34 @@
 
 
 <ion-content padding>
-
+    <ion-card>
+        <ion-card-content>
+            <ion-card-title color="primary"> Location Information </ion-card-title>
+        </ion-card-content>
+        <ion-row>
+            <ion-col>
+                <p>121, Clear Water Bay Road</p>
+                <p>Clear Water Bay, Kowloon</p>
+                <p>HONG KONG</p>
+                <p>
+                    <ion-icon name="call"></ion-icon>Tel: +852 1234 5678 </p>
+                <p>
+                    <ion-icon name="print"></ion-icon>Fax: +852 8765 4321 </p>
+                <p>
+                    <ion-icon name="call"></ion-icon>Email:confusion@food.net</p>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col>
+                <button ion-button icon-left clear small>
+              <ion-icon name="call">CALL</ion-icon>
+            </button>
+            </ion-col>
+            <ion-col>
+                <button ion-button icon-left clear small>
+              <ion-icon name="mail">EMAIL</ion-icon>
+            </button>
+            </ion-col>
+        </ion-row>
+    </ion-card>
 </ion-content>
