ionic FAB favorites

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,9 +20,8 @@
         </ion-card-content>
     </ion-card>
     <div [hidden]="dish || dishErrMess">
-        <ion-spinner>
-            <h4>Loading . . . Please Wait</h4>
-        </ion-spinner>
+        <ion-spinner></ion-spinner>
+        <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="dishErrMess">
         <h2>Error</h2>
@@ -40,9 +39,8 @@
         </ion-card-content>
     </ion-card>
     <div [hidden]="promotion || promoErrMess">
-        <ion-spinner>
-            <h4>Loading . . . Please Wait</h4>
-        </ion-spinner>
+        <ion-spinner></ion-spinner>
+        <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="promoErrMess">
         <h2>Error</h2>
@@ -60,9 +58,8 @@
         </ion-card-content>
     </ion-card>
     <div [hidden]="leader || leaderErrMess">
-        <ion-spinner>
-            <h4>Loading . . . Please Wait</h4>
-        </ion-spinner>
+        <ion-spinner></ion-spinner>
+        <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="leaderErrMess">
         <h2>Error</h2>
