--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -28,9 +28,8 @@
         </ion-card>
     </div>
     <div [hidden]="dishes || errMess">
-        <ion-spinner>
-            <h4>Loading . . . Please Wait</h4>
-        </ion-spinner>
+        <ion-spinner></ion-spinner>
+        <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="errMess">
         <h2>Error</h2>
