--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -40,9 +40,8 @@
         </ion-row>
     </ion-card>
     <div [hidden]="dish || errMess">
-        <ion-spinner>
-            <h4>Loading . . . Please Wait</h4>
-        </ion-spinner>
+        <ion-spinner></ion-spinner>
+        <h4>Loading . . . Please Wait</h4>
     </div>
     <div *ngIf="errMess">
         <h2>Error</h2>
@@ -58,4 +57,10 @@
             <p><span>--{{comment.author}} {{comment.date | date}}</span></p>
         </ion-item>
     </ion-list>
+    <ion-fab bottom right [hidden]="favorite">
+        <button ion-fab (click)="addToFavorites()"><ion-icon name="heart-outline"></ion-icon></button>
+    </ion-fab>
+    <ion-fab bottom right *ngIf="favorite">
+        <button ion-fab><ion-icon name="heart"></ion-icon></button>
+    </ion-fab>
 </ion-content>
