--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -1,18 +1,11 @@
-<!--
-  Generated template for the DishdetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
     <ion-navbar color="primary">
-        <ion-title>dishdetail</ion-title>
+        <ion-title>dishdetail </ion-title>
+        <ion-buttons end>
+            <button ion-button (click)="displayActionSheet()"><ion-icon name="more"></ion-icon></button>
+        </ion-buttons>
     </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
     <ion-card *ngIf="dish">
         <img src="{{BaseURL + dish.image}}" />
