--- a/src/pages/comment/comment.html
+++ b/src/pages/comment/comment.html
@@ -13,7 +13,7 @@
     <form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
         <ion-item>
             <ion-label>Rating</ion-label>
-            <ion-range min="1" max="5" step="1" formControlName="rating">
+            <ion-range min="1" max="5" step="1" formControlName="rating" snaps="true" pin="true">
                 <ion-icon range-left small name="thumbs-down"></ion-icon>
                 <ion-icon range-right name="thumbs-up"></ion-icon>
             </ion-range>
