--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the AboutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
     <ion-navbar color="primary">
         <button ion-button menuToggle>
@@ -11,7 +5,6 @@
         </button>
         <ion-title>About Us</ion-title>
     </ion-navbar>
-
 </ion-header>
 <ion-content padding>
     <ion-card>
@@ -26,24 +19,25 @@
             </ion-col>
         </ion-row>
     </ion-card>
-
     <div *ngIf="leaders">
-        <ion-list *ngFor="let leader of leaders" text-wrap>
-            <ion-row>
-                <ion-col>
-                    <ion-item>
-                        <ion-avatar item-start>
-                            <img src="{{BaseURL + leader.image}}">
-                        </ion-avatar>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <h1> <strong>{{leader.name}} </strong></h1>
-                    <h4> <strong>{{leader.designation}} </strong></h4>
-                    <p> {{leader.description}} </p>
-                </ion-col>
-            </ion-row>
-        </ion-list>
+        <ion-grid>
+            <ion-list *ngFor="let leader of leaders" text-wrap>
+                <ion-row>
+                    <ion-col>
+                        <ion-item>
+                            <ion-avatar item-start>
+                                <img src="{{BaseURL + leader.image}}">
+                            </ion-avatar>
+                        </ion-item>
+                    </ion-col>
+                    <ion-col>
+                        <h1> <strong>{{leader.name}} </strong></h1>
+                        <h4> <strong>{{leader.designation}} </strong></h4>
+                        <p> {{leader.description}} </p>
+                    </ion-col>
+                </ion-row>
+            </ion-list>
+        </ion-grid>
     </div>
     <div [hidden]="leaders || errMess">
         <ion-spinner></ion-spinner>
