--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,10 +5,7 @@
         </button>
         <ion-title>Contact Us</ion-title>
     </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
     <ion-card>
         <ion-card-content>
@@ -34,7 +31,7 @@
             </button>
             </ion-col>
             <ion-col>
-                <button ion-button icon-left clear small>
+                <button ion-button icon-left clear small (click)="sendEmail()">
               <ion-icon name="mail">EMAIL</ion-icon>
             </button>
             </ion-col>
