--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -26,7 +26,7 @@
         </ion-row>
         <ion-row>
             <ion-col>
-                <button ion-button icon-left clear small>
+                <button ion-button icon-left clear small (click)="callRestaurant()">
               <ion-icon name="call">CALL</ion-icon>
             </button>
             </ion-col>
